@@ -4,7 +4,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2018-08-09T15:04:05.999Z",
             "agent": {
@@ -44,7 +44,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "process": {
@@ -71,7 +71,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -86,7 +86,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -125,7 +125,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2018-08-30T18:53:27.154Z",
             "agent": {
@@ -157,7 +157,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "process": {
@@ -199,7 +199,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2017-05-30T18:53:42.281Z",
             "agent": {
@@ -240,7 +240,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "process": {
