@@ -4,7 +4,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -29,7 +29,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "processor": {
@@ -47,7 +47,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -74,7 +74,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "processor": {
@@ -92,7 +92,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -119,7 +119,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "processor": {
@@ -137,7 +137,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -152,7 +152,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -190,7 +190,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2018-08-30T18:53:27.154Z",
             "agent": {
@@ -205,7 +205,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -240,7 +240,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -258,7 +258,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "processor": {
@@ -290,7 +290,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2017-05-30T18:53:42.281Z",
             "agent": {
@@ -308,7 +308,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "processor": {
