@@ -4,7 +4,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2018-07-30T18:53:42.281Z",
             "agent": {
@@ -19,7 +19,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -56,7 +56,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2018-07-30T18:53:42.281Z",
             "agent": {
@@ -71,7 +71,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -109,7 +109,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -130,7 +130,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -169,7 +169,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -184,7 +184,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -225,7 +225,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -240,7 +240,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
