@@ -4,7 +4,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2019-01-09T21:40:53.000Z",
             "agent": {
@@ -40,7 +40,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "parent": {
@@ -103,7 +103,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2017-05-30T18:53:27.154Z",
             "agent": {
@@ -201,7 +201,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "process": {
@@ -290,7 +290,7 @@
             "@metadata": {
                 "beat": "apm-test",
                 "type": "_doc",
-                "version": "7.0.2"
+                "version": "7.1.0"
             },
             "@timestamp": "2018-07-30T18:53:42.281Z",
             "agent": {
@@ -331,7 +331,7 @@
                 "hostname": "",
                 "id": "fbba762a-14dd-412c-b7e9-b79f903eb492",
                 "type": "test-apm-server",
-                "version": "7.0.2",
+                "version": "7.1.0",
                 "version_major": 7
             },
             "process": {
