@@ -1,6 +1,6 @@
-:stack-version: 7.0.1
-:major-version: 7.x
-:doc-branch: 7.0
+:stack-version: 7.1.0
+:major-version: 7.1
+:doc-branch: 7.1
 :branch: {doc-branch}
 :go-version: 1.11.5
 :release-state: released
