@@ -18,4 +18,4 @@
 // Code generated by dev-tools/set_version
 package version
 
-const defaultBeatVersion = "7.0.2"
+const defaultBeatVersion = "7.1.0"
