@@ -1,3 +1,4 @@
+include::./changelogs/7.1.asciidoc[]
 include::./changelogs/7.0.asciidoc[]
 include::./changelogs/6.7.asciidoc[]
 include::./changelogs/6.6.asciidoc[]
